@@ -432,7 +432,7 @@ GRW_internal_affairs = {
 		available = {
 			has_idea = opened_up_schools3
 			NOT = {
-				focus_progress = { focus = GRW_open_up_schools2 progress > 0 }
+				focus_progress = { focus = GRW_open_up_schools3 progress > 0 }
 			}
 		}
 		cost = 20
