@@ -933,7 +933,7 @@ ideas = {
 	}
 	country = {
 		GRW_expansionism_idea = {
-			
+			picture = idea_raj_indian_gentlemen_officers
 			allowed = {
 				always = yes
 			}
@@ -1776,7 +1776,7 @@ ideas = {
 	}
 	country = {
 		GRW_agriculture_new = {
-			
+			picture = ast_all_in
 			allowed = {
 				always = yes
 			}
@@ -1860,6 +1860,25 @@ ideas = {
 			
 			modifier = {
 				conscription = 0.05
+			}
+		}
+	}
+	country = {
+		GRW_victory_in_civil_war_bonus = {
+			picture = can_patriation
+			allowed = {
+				always = yes
+			}
+			available = {
+				NOT = {
+					has_war = yes
+				}
+			}
+			removal_cost = -1
+			
+			modifier = {
+				political_power_gain = 0.15
+				stability_factor = 0.2
 			}
 		}
 	}
