@@ -349,6 +349,7 @@ focus_tree = {
 		x = 5
 		y = 3
 		completion_reward = {
+			add_timed_idea = { idea = GRW_victory_in_civil_war_bonus days = 300 }
 			country_event = {
 				id = prywhen.9
 			}
@@ -982,6 +983,9 @@ focus_tree = {
 			focus = GRW_LUS_infiltration
 			focus = GRW_GRU_infiltration
 		}
+		available = {
+			is_neighbor_of = BOI
+		}
 		bypass = {
 			BOI = {
 				OR = {
@@ -1021,6 +1025,15 @@ focus_tree = {
 		}
 		x = 12
 		y = 8
+		available = {
+			owns_state = 389
+		}
+		bypass = {
+			OR = {
+				389 = { is_core_of = GRW }
+				BOI = { is_subject_of = GRW }
+			}
+		}
 		completion_reward = {
 			every_state = {
 				limit = {
@@ -1346,6 +1359,12 @@ focus_tree = {
 		prerequisite = {
 			focus = GRW_marsh_to_griffinstone
 		}
+		available = {
+			OR = {
+				owns_state = 389
+				owns_state = 382
+			}
+		}
 		x = 14
 		y = 8
 		completion_reward = {
@@ -1590,7 +1609,7 @@ focus_tree = {
 		y = 16
 		completion_reward = {
 			increase_society_development_gradual = yes
-			unlock_decision_tooltip = STG_palace_construction_effort
+			unlock_decision_tooltip = GRW_transformation_to_modern_society
 		}
 	}
 	focus = {
@@ -2182,7 +2201,7 @@ focus_tree = {
 	focus = {
 		id = GRW_kings_lab
 		icon = GFX_focus_ger_return_of_the_kaiser
-		cost = 10.00
+		cost = 9
 		x = 21
 		y = 1
 		available = {
