@@ -157,7 +157,17 @@ country_event = { #History
 		create_wargoal = { target = GRW type = annex_everything }
 		set_country_flag = GRW_event_fired
 		set_country_flag = wants_to_contain_GRW
-		ai_chance = { factor = 70 }
+		ai_chance = {
+			factor = 70
+			modifier = {
+				factor = 0.5
+				has_government = democratic
+			}
+			modifier = {
+				factor = 0
+				has_government = communism
+			}
+		}
 	}
 	option = {
 		name = griffonian.6.b
