@@ -1723,6 +1723,60 @@ country_event = { #GRF/GFF becomes puppet
 	}
 }
 
+country_event = { ## GRI touches WNG while at war with Prywhen
+	id = imperial.64
+	immediate = {log = "[Root.GetName]: event imperial.64"}#Auto-logging
+	title = imperial.64.t
+	desc = imperial.64.d
+	picture = GFX_event_griffon_mountain
+	trigger = {
+		tag = GRI
+		has_war_with = GRW
+		WNG = { has_war_with = GRW }
+		has_country_flag = GRW_event_fired
+		is_neighbor_of = WNG
+	}
+	fire_only_once = yes
+	option = {
+		name = imperial.64.a
+		create_wargoal = { type = annex_everything target = WNG }
+		ai_chance = {
+			factor = 60
+			modifier = {
+				factor = 0
+				has_government = communism
+				WNG = { has_government = communism }
+			}
+			modifier = {
+				factor = 0.4
+				is_in_faction_with = WNG
+			}
+		}
+	}
+	option = {
+		name = imperial.64.b
+		create_wargoal = { type = annex_everything target = WNG }
+		ai_chance = {
+			factor = 20
+			modifier = {
+				factor = 0
+				has_government = communism
+				WNG = { has_government = communism }
+			}
+			modifier = {
+				factor = 0.4
+				is_in_faction_with = WNG
+			}
+		}
+	}
+	option = {
+		name = imperial.64.c
+		add_political_power = 50
+		ai_chance = {
+			factor = 20
+		}
+	}
+}
 
 ### News Events ###
 
