@@ -62,7 +62,7 @@ units = {
 		start_equipment_factor = 0.5 }
 	division = {
 		name = "Beak Mountaineer Regiment"
-		location = 12029
+		location = 7140
 		division_template = "Free Griffon Mountaineers"
 		start_experience_factor = 0.3
 		start_equipment_factor = 0.5 }
@@ -80,7 +80,7 @@ units = {
 		start_equipment_factor = 0.5 }
 	division = {
 		name = "Border Mountaineer Regiment"
-		location = 10087
+		location = 3960
 		division_template = "Free Griffon Mountaineers"
 		start_experience_factor = 0.3
 		start_equipment_factor = 0.5 }
