@@ -638,3 +638,9 @@
 
  GRI_takeover_TRD_fleet:0 "Demand control over [TRD.GetAdjective] Fleet"
  GRI_takeover_TRD_fleet_desc:0 "After the collapse of the Empire, Skyfall has taken control of the Imperial Navy. With the Empire resurgent once more and [TRD.GetName] our subjects, it's high time the command of the Navy went back to Griffenheim."
+
+imperial.64.t:0 "Perfect time to strike"
+imperial.64.d:0 "While we and [WNG.GetName] are at war with [GRW.GetName], it is the optimal time for us to declare war on [WNG.GetName] and reclaim the southern coast of Griffonia."
+imperial.64.a:0 "Forwads!"
+imperial.64.b:0 "Yes"
+imperial.64.c:0 "Not now."
