@@ -632,3 +632,9 @@ GRI_imperial_party_d_long:0 "Имперская Лига Её Император
  kraken:0 "Кракен Шипбилдинг"
  imperial_motors:0 "Империал Моторс"
  arcturian:0 "Арктуриан Автомобил Индастриз"
+
+imperial.64.t:0 "Perfect time to strike"
+imperial.64.d:0 "While we and [WNG.GetName] are at war with [GRW.GetName], it is the optimal time for us to declare war on [WNG.GetName] and reclaim the southern coast of Griffonia."
+imperial.64.a:0 "Forwads!"
+imperial.64.b:0 "Yes"
+imperial.64.c:0 "Not now."
