@@ -53,6 +53,7 @@ GRW_family_care_idea:0 "Family Care"
 GRW_family_care_idea2:0 "Free Healthcare"
 GRW_expansionism_idea:0 "Expansionism"
 GRW_protectionism_idea:0 "Isolationism"
+GRW_victory_in_civil_war_bonus:0 "Victory Cheer"
 ########
 war_of_liberation:0 "War of Liberation"
 war_of_liberation_desc:0 "We will cast out the monarchist scum and liberate our people from their bourgeoisie oppression!"
