@@ -53,6 +53,7 @@ GRW_family_care_idea:0 "Домашняя Обстановка"
 GRW_family_care_idea2:0 "Бесплатное медицинское обслуживание"
 GRW_expansionism_idea:0 "Экспансионизм"
 GRW_protectionism_idea:0 "Изоляционизм"
+GRW_victory_in_civil_war_bonus:0 "Радость Победе"
 ########
 war_of_liberation:0 "Освободительная война"
 war_of_liberation_desc:0 "Мы ведем войну с нашим заклятым врагом, монархистами. Мы обязаны защитить наш народ от буржуазных экспуататоров!"
