@@ -1,5 +1,5 @@
 🌼 “Poppy” 1.1 🌼
-❈ Countries with focus trees:
+❈ New focus trees for countries:
 	✢ New Mareland
 	✢ Sunstriker Clan
 	✢ Flowena
@@ -24,6 +24,7 @@
 ✢ Spellchecking
 ✢ Aquiliea, Vedina and Griffonian Republic now start with minor navies.
 ✢ Minor map edit in Eastern Griffonia.
+✢ Removed the fat mountain chain in Nova Griffonia.
 ✢ AI templates updated for new pure infantry meta.
 ✢ Hjortsling takes control of Olenia when they are forcibly puppeted by the Changelings.
 ✢ Expanded Maar path for Greifwald
